<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_by"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort"
        app:showAsAction="always">

        <!-- movies Filter Menu -->
        <menu>
            <group
                android:id="@+id/menu_sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_popular_movies"
                    android:title="@string/popular_movies" />
                <item
                    android:id="@+id/action_top_rated"
                    android:title="@string/top_rated" />

            </group>
        </menu>
    </item>
</menu>