<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/moive_item_layout"
    android:layout_width="match_parent"
    android:layout_height="350dp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/title_layout"
        app:layout_constraintEnd_toEndOf="@+id/poster_img"
        app:layout_constraintStart_toStartOf="@+id/poster_img"
        app:layout_constraintTop_toTopOf="@+id/poster_img" />

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/poster_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/moive_poster"/>

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#80000000"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/poster_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/moive_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moive_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/moive_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moive_rating"
            android:gravity="center"
            android:drawableStart="@drawable/ic_star"
            android:layout_alignParentStart="true"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/moive_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:text="@string/moive_year"
        android:textColor="@android:color/white" />

</RelativeLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>