<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.views.MovieActivity"
        tools:showIn="@layout/activity_movie">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/movie_poster"
            android:layout_width="0dp"
            android:layout_height="230dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="6dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintDimensionRatio="w,2:3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.android.volley.toolbox.NetworkImageView
                android:id="@+id/movie_poster_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/moive_poster"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="68dp"
            android:layout_marginEnd="16dp"
            android:text="@string/moive_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/movie_poster"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="movie_title,movie_poster" />

        <View
            android:id="@+id/view_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/barrier2" />

        <TextView
            android:id="@+id/label_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/moive_year"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_language"
            app:layout_constraintTop_toBottomOf="@+id/movie_releasedate" />

        <TextView
            android:id="@+id/movie_releasedate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/label_release_date"
            app:layout_constraintStart_toStartOf="@+id/label_release_date"
            app:layout_constraintTop_toBottomOf="@+id/view_divider"
            android:text="" />

        <TextView
            android:id="@+id/label_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/label_language"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_rating"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_star"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text=""
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/label_vote"
            app:layout_constraintStart_toStartOf="@+id/label_vote"
            app:layout_constraintTop_toTopOf="@+id/movie_releasedate" />

        <TextView
            android:id="@+id/label_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/movie_language"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/label_release_date"
            app:layout_constraintStart_toEndOf="@+id/label_vote"
            app:layout_constraintTop_toBottomOf="@+id/movie_language" />

        <TextView
            android:id="@+id/movie_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="@+id/label_language"
            app:layout_constraintStart_toStartOf="@+id/label_language"
            app:layout_constraintTop_toTopOf="@+id/movie_rating"
            android:text="" />

        <View
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_vote" />

        <TextView
            android:id="@+id/label_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/movie_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div" />

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text=""
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_overview" />

        <TextView
            android:id="@+id/label_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/trailers"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_trailers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_trailers" />

        <TextView
            android:id="@+id/label_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/reviews"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_trailers" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:clipChildren="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_reviews" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
